fix menu horizontal missalign

--- a/web/src/css/nav.css
+++ b/web/src/css/nav.css
@@ -44,7 +44,6 @@ nav .nav-box{
 }
 
 .menu-earth-button {
-  width: 16em;
   text-align: left;
 }
 .earth-svg{
